# wafer

csmith/: generate_csmith.sh
emi/clang-tools-extra/: CMakeLists.txt
emi/clang-tools-extra/emi/: CMakeLists.txt  emi.cpp
emi/scripts/: main.sh  seed_filter.sh  testing_pipeline.sh
synthesis/clang-tools-extra/: CMakeLists.txt
synthesis/clang-tools-extra/common/: common.cpp  common.h  header.h  type.cpp  type.h
synthesis/clang-tools-extra/floatGuard/: CMakeLists.txt  FloatGuard.cpp
synthesis/clang-tools-extra/pointerGuard/: CMakeLists.txt  PointerGuard.cpp
synthesis/clang-tools-extra/shiftGuard/: CMakeLists.txt  ShiftGuard.cpp
synthesis/clang-tools-extra/split/: CMakeLists.txt  Split.cpp
synthesis/clang-tools-extra/synthesize/: CMakeLists.txt  synthesize.cpp
synthesis/scripts/: category.sh  parallel_gene.sh
